# Networked-Search-Engine

./: .gitignore  CMakeLists.txt  search.py
docs/: a.txt  cat.txt  dog.txt
searchcore/: CMakeLists.txt  binio.hpp  doc.hpp  index.hpp  parallelIndex.hpp  segmentReader.hpp  segmentWriter.hpp  test.cpp  tokenize.hpp
